--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/yusungsamuel/God-Of-Destruction-Simulator#readme",
   "dependencies": {
+    "animejs": "^3.0.1",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "mysql": "^2.16.0"
